<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">




        <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/subtitle_text_size"
        android:gravity="center"
        android:background="@drawable/bg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_name"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title"
        >

        <EditText
            android:id="@+id/log_name"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:padding="@dimen/input_padding"
            android:textSize="@dimen/text_size"
            tools:text="myName"
            tools:textColor="@color/slate" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_firstName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_firstName"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        >

        <EditText
            android:id="@+id/log_firstName"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:padding="@dimen/input_padding"
            android:textSize="@dimen/text_size"
            tools:text="myFirstName"
            tools:textColor="@color/slate" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_firstName"
        >

        <EditText
            android:id="@+id/log_email"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:padding="@dimen/input_padding"
            android:textSize="@dimen/text_size"
            tools:text="myEmail@domain.com"
            tools:textColor="@color/slate" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email">

        <EditText
            android:textColor="@color/black"
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:padding="@dimen/input_padding"
            android:textSize="@dimen/text_size"
            tools:text="myPassword"
            tools:textColor="@color/slate" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_confirm_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_password_confirm"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password">

        <EditText
            android:textColor="@color/black"
            android:id="@+id/log_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:padding="@dimen/input_padding"
            android:textSize="@dimen/text_size"
            tools:text="myConfirmPassword"
            tools:textColor="@color/slate" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/checkbox_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_password">
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:background="@color/emerald"
        android:checked="false"
            />
        <TextView
            android:textColor="@color/black"
            android:text="@string/terms_license"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:paddingVertical="@dimen/btn_padding"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_term" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button">

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_account"
            android:textColor="@color/slate"
            android:textSize="@dimen/text_size"
            />
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/slate"
            android:textSize="@dimen/text_size"
            android:clickable="true"
            android:focusable="true"
            />
     </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>