<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_head_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_product_details"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_product_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_detail_image_height"
                android:background="@color/colorImageViewBackground"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:background="@color/dashboard_item_details_bg"
                android:orientation="vertical"
                android:padding="@dimen/product_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_detail_image">

                <TextView
                    android:id="@+id/tv_product_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_title_textSize"
                    android:textStyle="bold"
                    tools:text="Product Title" />

                <TextView
                    android:id="@+id/tv_product_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_price_textSize"
                    tools:text="$100" />

                <RatingBar
                    android:id="@+id/ratingTotalBar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:progressBackgroundTint="@color/emerald"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:text="@string/lbl_product_description"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/product_details_label_textSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_title_price" />

            <TextView
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/product_details_label_margin"
                android:layout_marginEnd="@dimen/product_details_label_margin"
                android:textColor="@color/slate"
                android:textSize="@dimen/product_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_label"
                tools:text="This is product details description." />

            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_description">

                <TextView
                    android:id="@+id/tv_product_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_product_details_stock_quantity"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_label_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_product_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_background"
                    android:paddingStart="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:textColor="@color/slate"
                    android:textSize="@dimen/product_details_stock_quantity_textSize"
                    android:textStyle="bold"
                    tools:text="5" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_quantity"
                android:gravity="center">
            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:isIndicator="false"
                android:max="5"
                android:paddingStart="@dimen/str_padding"
                android:paddingEnd="@dimen/str_padding"
                android:progressBackgroundTint="@color/emerald"
                android:rating="0"
                android:scaleX=".8"
                android:scaleY=".8"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                 />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                style="?android:buttonStyle"
                android:background="@drawable/bg_btn"
                android:text="@string/rate"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="25dp"
                android:background="@drawable/bg_btn"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingVertical="@dimen/btn_padding"
                android:text="@string/btn_lbl_add_to_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_rating" />

            <Button
                android:id="@+id/btn_go_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_btn"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_go_to_cart"
                android:textColor="@android:color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_to_cart"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>